# Lab2QRCode-HttpService

./: CMakeLists.txt  main.cpp  readme.md
.github/lib/: build_cmake_lib.yaml
.github/workflows/: build.yaml
include/: SimpleBase64.h
src/: compress.cpp  compress.h  heterogeneous.hpp  http_server_wrapper.hpp  request_process.hpp
